--- a/FTO_Sistema/FTO_App/App.xaml
+++ b/FTO_Sistema/FTO_App/App.xaml
@@ -10,9 +10,13 @@
 
         <SolidColorBrush x:Key="PrimaryColor">#0b3d91</SolidColorBrush>
         <SolidColorBrush x:Key="AccentColor">#FFD700</SolidColorBrush>
+
         <SolidColorBrush x:Key="WindowBackgroundBrush">#F5F5F7</SolidColorBrush>
         <SolidColorBrush x:Key="CardBackgroundBrush">#FFFFFF</SolidColorBrush>
+        
         <SolidColorBrush x:Key="InputBackgroundBrush">#FFFFFF</SolidColorBrush>
+        <SolidColorBrush x:Key="InputTextBrush">#000000</SolidColorBrush>
+        
         <SolidColorBrush x:Key="TextBrush">#000000</SolidColorBrush>
         <SolidColorBrush x:Key="SecondaryTextBrush">#555555</SolidColorBrush>
         <SolidColorBrush x:Key="TitleBrush">#0b3d91</SolidColorBrush>
@@ -34,6 +38,62 @@
         <SolidColorBrush x:Key="ActionDelBg">#FFEBEE</SolidColorBrush>
         <SolidColorBrush x:Key="ActionDelFg">#C62828</SolidColorBrush>
 
+        <Style x:Key="ModernTextBox" TargetType="TextBox">
+            <Setter Property="Height" Value="28"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="5,0"/>
+            <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}"/>
+            <Setter Property="Background" Value="{DynamicResource InputBackgroundBrush}"/>
+            <Setter Property="Foreground" Value="{DynamicResource InputTextBrush}"/>
+            <Setter Property="CaretBrush" Value="{DynamicResource InputTextBrush}"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="TextBox">
+                        <Border CornerRadius="3" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1" Background="{TemplateBinding Background}">
+                            <ScrollViewer x:Name="PART_ContentHost"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style TargetType="ComboBox">
+            <Setter Property="Height" Value="28"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}"/>
+            <Setter Property="Background" Value="{DynamicResource InputBackgroundBrush}"/>
+            <Setter Property="Foreground" Value="{DynamicResource InputTextBrush}"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="Padding" Value="5,0"/>
+            
+            <Style.Resources>
+                <Style TargetType="TextBox">
+                    <Setter Property="Background" Value="{DynamicResource InputBackgroundBrush}"/>
+                    <Setter Property="Foreground" Value="{DynamicResource InputTextBrush}"/>
+                    <Setter Property="CaretBrush" Value="{DynamicResource InputTextBrush}"/>
+                </Style>
+            </Style.Resources>
+        </Style>
+
+        <Style TargetType="DatePicker">
+            <Setter Property="Height" Value="28"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}"/>
+            <Setter Property="Background" Value="{DynamicResource InputBackgroundBrush}"/>
+            <Setter Property="Foreground" Value="{DynamicResource InputTextBrush}"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="Padding" Value="2"/>
+            <Setter Property="CalendarStyle">
+                <Setter.Value>
+                    <Style TargetType="Calendar">
+                        <Setter Property="Background" Value="{DynamicResource CardBackgroundBrush}"/>
+                        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}"/>
+                        <Setter Property="Foreground" Value="{DynamicResource TextBrush}"/>
+                    </Style>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
         <Style x:Key="LoginInputStyle" TargetType="Control">
             <Setter Property="Height" Value="40"/>
             <Setter Property="BorderThickness" Value="1"/>
@@ -51,41 +111,6 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-        </Style>
-
-        <Style x:Key="ModernTextBox" TargetType="TextBox">
-            <Setter Property="Height" Value="28"/>
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
-            <Setter Property="Padding" Value="5,0"/>
-            <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}"/>
-            <Setter Property="Background" Value="{DynamicResource InputBackgroundBrush}"/>
-            <Setter Property="Foreground" Value="{DynamicResource TextBrush}"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="TextBox">
-                        <Border CornerRadius="3" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1" Background="{TemplateBinding Background}">
-                            <ScrollViewer x:Name="PART_ContentHost"/>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <Style TargetType="DatePickerTextBox">
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Foreground" Value="{DynamicResource TextBrush}"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
-        </Style>
-
-        <Style TargetType="DatePicker">
-            <Setter Property="Height" Value="28"/>
-            <Setter Property="VerticalContentAlignment" Value="Center"/>
-            <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}"/>
-            <Setter Property="Background" Value="{DynamicResource InputBackgroundBrush}"/>
-            <Setter Property="Foreground" Value="{DynamicResource TextBrush}"/>
-            <Setter Property="BorderThickness" Value="1"/>
-            <Setter Property="Padding" Value="2"/>
         </Style>
 
         <Style x:Key="HoverButtonStyle" TargetType="Button">
